--- a/esphome/2_1_LED.yaml
+++ b/esphome/2_1_LED.yaml
@@ -1,5 +1,7 @@
 esphome:
   name: metatool1
+  # Start the oscillation when the device boots
+
 
 esp32:
   board: esp32-s3-devkitc-1
@@ -8,6 +10,7 @@ esp32:
 
 # Enable logging
 logger:
+  level: VERBOSE
 
 # Enable Home Assistant API
 api:
@@ -21,14 +24,6 @@ wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
 
-  #manual_ip: 
-    # Set this to the IP of the ESP
-    #  static_ip: 192.168.1.201
-    # Set this to the IP address of the router. Often ends with .1
-    #gateway: 192.168.1.1
-    # The subnet of the network. 255.255.255.0 works for most home networks.
-    #subnet: 255.255.255.0
-
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
     ssid: "Metatool1 Fallback Hotspot"
@@ -40,8 +35,18 @@ captive_portal:
 web_server:
   port: 80
 
+output:
+  - platform: ledc
+    id: gpio14_output
+    pin: GPIO14
+    frequency: 1000 Hz
 
 light:
+  - platform: monochromatic
+    name: "GPIO 14 LED Light"
+    output: gpio14_output
+    id: gpio_14_led_light
+
   - platform: neopixelbus
     id: "neopixel_light"
     type: GRB
@@ -49,3 +54,4 @@ light:
     pin: GPIO48
     num_leds: 60
     name: "NeoPixel Light"
+
