--- a/esphome/2_3_stepper_test.yaml
+++ b/esphome/2_3_stepper_test.yaml
@@ -1,9 +1,11 @@
 esphome:
   name: metatool1
+  # Start the oscillation when the device boots
   on_boot:
     priority: 600.0
     then:
       - script.execute: oscillate_stepper1
+
 
 esp32:
   board: esp32-s3-devkitc-1
@@ -33,6 +35,7 @@ wifi:
 
 captive_portal:
 
+  # Example configuration entry
 web_server:
   port: 80
 
@@ -46,6 +49,7 @@ light:
   - platform: monochromatic
     name: "GPIO 14 LED Light"
     output: gpio14_output
+
   - platform: neopixelbus
     id: "neopixel_light"
     type: GRB
@@ -76,3 +80,6 @@ script:
           target: -1000
       - delay: 1s
       - script.execute: oscillate_stepper1
+
+
+
