--- a/esphome/secrets.yaml.example
+++ b/esphome/secrets.yaml.example
@@ -1,4 +1,4 @@
 # copy and rename this file to secrets.yaml
 
-wifi_ssid: 'SSID HERE'
-wifi_password: 'PASSWORD HERE'
+wifi_ssid: 'Columbia University'
+wifi_password: ''
